<resources>
    <string name="app_name">Video_Player</string>
    <string name="all_video">All Video</string>
    <string name="all_folder">All Folders</string>
    <string name="all_status">All Status</string>

    <!--fragments-->
    <string name="total_video">Total Video:</string>
    <string name="total_folder">Total Folders:</string>
    <string name="total_status">Total Status:</string>

    <!--    drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_oder">Shor Oder</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!--    header-->
    <string name="videoapp">Videoapp</string>


    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>

    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="lock">Lock Icon</string>
    <string name="repeat_btn">repeat_btn</string>
    <string name="prev_icon" />
    <string name="next_btn" />
    <string name="full_screen" />
    <string name="play_btn" />
    <string name="audio_track">Audio_track</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="speed">Speed</string>
    <string name="booster">Booster</string>
    <string name="subtitles">Subtitles</string>
    <string name="search" />

    <!--    -->
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>

</resources>