<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23000000"
    tools:context=".Activitys.PlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view"
        app:use_controller="true" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/videoTital"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/video_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu" />

        <ImageView
            android:id="@+id/lock_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/lock"
            android:src="@drawable/lock_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/topController" />
    </LinearLayout>

    <ImageView
        android:id="@+id/playPauseBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?selectableItemBackground"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/play_btn"
        android:focusable="true"
        android:src="@drawable/play_btn_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/repeatBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/repeat_on_btn" />


        <ImageView
            android:id="@+id/prevBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/prev_icon"
            android:src="@drawable/previous_icon" />

        <ImageView
            android:id="@+id/nextBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_btn"
            android:src="@drawable/next_icon" />

        <ImageView
            android:id="@+id/fullScreenBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/full_screen"
            android:src="@drawable/full_screen_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>