<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/renameBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/rename"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/rename_icon"
            app:iconGravity="top"
            app:iconTint="?attr/themeColor" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/delete_icon"
            app:iconGravity="top"
            app:iconTint="?attr/themeColor" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:background="@drawable/ripple_effect"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/share_icon"
            app:iconGravity="top"
            app:iconTint="?attr/themeColor" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/ripple_effect"
            android:text="@string/info"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/info_icon"
            app:iconGravity="top"
            app:iconTint="?attr/themeColor" />

    </LinearLayout>

</LinearLayout>